oxiplate-derive/tests/broken/include/missing-close-quote.stderr
error: Unclosed string
 --> tests/broken/include/missing-close-quote.rs:4:33
  |
4 | #[oxiplate_inline(r#"{% include "include.html.oxip %}"#)]
  |                                 ^^^^^^^^^^^^^^^^^^^^^
